--- a/07_transform.qmd
+++ b/07_transform.qmd
@@ -127,7 +127,7 @@ By default `cut()`:
 -   creates a left-open and right-closed interval, i.e., `(25,30]` excludes 25 and includes 30.
 -   creates labels in mathematical notation.
 
-We can add custom labels to each group by adding the argument `labels =`. NB: labels should have 1 fewer element than `breaks =`.
+We can add custom labels to each group by adding the argument `labels =`. NB: labels should have 1 less `labels` than `breaks`.
 
 ```{r}
 dm_bmi <- dm |>
